--- a/index.html
+++ b/index.html
@@ -10,34 +10,18 @@
   <body>
     <h1>Hello World</h1>
     <div id="root"></div>
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
-    <script
+    <script                                                       
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
+    <!-- // using CDN link for react and react-dom -->
+    <script type = "module" src="./app.js"></script>
         
-    <script>
-       const heading = React.createElement("h1" , {className: "prop"} , "Hello Anil");
-//        const heading = React.createElement(
-//   "h1", 
-//   { 
-//     style: { 
-//       color: "red",
-//       backgroundColor: "yellow",     // we are also used that code
-//       fontSize: "24px",
-//       padding: "10px"
-//     } 
-//   },
-//   "Hello Anil"
-// );
-       //createRoot() is a React 18+ method that creates a root for your React application
-       const root = ReactDOM.createRoot(document.getElementById("root"));
-       // for render use root.render()
-       root.render(heading)
-    </script>
+   
   </body>
 </html>
 
