Adding some changes and adding the functional component

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Hello World</h1>
     <div id="root"></div>
+    <div class="home"></div>
     <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
@@ -19,7 +20,8 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script> -->
     <!-- // using CDN link for react and react-dom -->
-    <script type = "module" src="./app.js"></script>
+    <!-- <script type = "module" src="./app.js"></script> -->
+    <script type="module" src="home.js"></script>
         
    
   </body>
